--- a/src/components/page/style/common.css
+++ b/src/components/page/style/common.css
@@ -1,6 +1,4 @@
 body {
-    font-size: 50px;
     color: #ff0000;
-    background: orange;
-    background: url('../../../assets/imgs/1607782443710.jpg');
+    background: url('../../../assets/imgs/test.jpg');
 }
