feat: url-loader和file-loader不能共存

--- a/src/components/page/style/header.less
+++ b/src/components/page/style/header.less
@@ -1,4 +1,4 @@
-body {
+.world {
     font-size: 50px;
-    background: url('../../../assets/imgs/tangyuan.jpg') no-repeat;
+    background: url('../../../assets/imgs/cat.png') no-repeat;
 }
